--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -16,15 +16,72 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  docker:
+  build:
     runs-on: cluster-runner
+    permissions:
+      contents: read
+    strategy:
+      matrix:
+        include:
+          - platform: linux/amd64
+            goarch: amd64
+          - platform: linux/arm64
+            goarch: arm64
+
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: golemnetwork/restate-allocators
+          tags: |
+            # Tag main as latest
+            type=raw,value=latest,enable={{is_default_branch}},suffix=-${{ matrix.goarch }}
+
+            # Label based on git tag
+            type=ref,event=tag,suffix=-${{ matrix.goarch }}
+            # Also add label for major version only
+            type=match,pattern=v\d+,suffix=-${{ matrix.goarch }}
+
+            # Nightly release for each PR
+            type=ref,event=pr,suffix=-${{ matrix.goarch }}
+
+            # Nightly releases on each push, except on main
+            type=sha,enable={{is_not_default_branch}},suffix=-${{ matrix.goarch }}
+        # check out PR head instead of merge commit into base branch
+        # this way, the SHAs will be correct
+        env:
+          DOCKER_METADATA_PR_HEAD_SHA: true
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          platforms: ${{ matrix.platform }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            GOARCH=${{ matrix.goarch }}
+          cache-from: type=gha,scope=${{ matrix.goarch }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.goarch }}
+        env:
+          DOCKER_BUILD_RECORD_UPLOAD: false
+
+  manifest:
+    runs-on: cluster-runner
+    needs: build
     permissions:
       contents: read
 
     steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -50,21 +107,15 @@ jobs:
 
             # Nightly releases on each push, except on main
             type=sha,enable={{is_not_default_branch}}
-        # check out PR head instead of merge commit into base branch
-        # this way, the SHAs will be correct
         env:
           DOCKER_METADATA_PR_HEAD_SHA: true
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          platforms: |
-            linux/amd64
-            linux/arm64/v8
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-        env:
-          DOCKER_BUILD_RECORD_UPLOAD: false
+      - name: Create and push multi-arch manifest
+        run: |
+          TAGS="${{ steps.meta.outputs.tags }}"
+
+          for tag in $TAGS; do
+            docker buildx imagetools create -t $tag \
+              ${tag}-amd64 \
+              ${tag}-arm64
+          done
