--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -16,15 +16,22 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  metadata:
+  docker:
     runs-on: cluster-runner
     permissions:
       contents: read
-    outputs:
-      tags: ${{ steps.meta.outputs.tags }}
-      labels: ${{ steps.meta.outputs.labels }}
+
     steps:
       - uses: actions/checkout@v6
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Extract metadata
         id: meta
@@ -50,59 +57,14 @@ jobs:
         env:
           DOCKER_METADATA_PR_HEAD_SHA: true
 
-  build:
-    runs-on: cluster-runner
-    needs: metadata
-    permissions:
-      contents: read
-    strategy:
-      matrix:
-        include:
-          - platform: linux/amd64
-            goarch: amd64
-          - platform: linux/arm64
-            goarch: arm64
-
-    steps:
-      - uses: actions/checkout@v6
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           push: true
-          platforms: ${{ matrix.platform }}
-          tags: ${{ needs.metadata.outputs.tags }}-${{ matrix.goarch }}
-          labels: ${{ needs.metadata.outputs.labels }}
-          cache-from: type=gha,scope=${{ matrix.goarch }}
-          cache-to: type=gha,mode=max,scope=${{ matrix.goarch }}
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
         env:
           DOCKER_BUILD_RECORD_UPLOAD: false
-
-  manifest:
-    runs-on: cluster-runner
-    needs: [metadata, build]
-    permissions:
-      contents: read
-
-    steps:
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Create and push multi-arch manifest
-        run: |
-          TAGS="${{ needs.metadata.outputs.tags }}"
-
-          for tag in $TAGS; do
-            docker buildx imagetools create -t $tag \
-              ${tag}-amd64 \
-              ${tag}-arm64
-          done
