--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -17,7 +17,14 @@ concurrency:
 
 jobs:
   docker:
-    runs-on: cluster-runner
+    strategy:
+      matrix:
+        include:
+          - runner: ubuntu-22.04
+            platform: linux/amd64
+          - runner: ubuntu-22.04-arm
+            platform: linux/arm64/v8
+    runs-on: ${{ matrix.runner }}
     permissions:
       contents: read
 
@@ -59,9 +66,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          platforms: |
-            linux/amd64
-            linux/arm64/v8
+          platforms: ${{ matrix.platform }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
